[package]
name = "pkt-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.29"
unicode-width = "0.1"
itertools = "0.12"
webbrowser = "0.8.13"
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tui-textarea = "0.7.0"
reqwest = { version = "0.12.2", features = ["json"] }
anyhow = "1.0.81"
thiserror = "1.0.58"
color-eyre = "0.6.3"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
cli-clipboard = "0.4"

[dev-dependencies]
tempfile = "3.10.1"
