[package]
name = "pkt-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.29"
unicode-width = "0.1"
itertools = "0.12"
webbrowser = "0.8.13"
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tui-textarea = "0.7.0"
reqwest = { version = "0.12.2", features = ["json", "blocking"] }

# this library is super heavy, but it's capable of extracting text from PDFs without hassle
extractous = "0.3.0"

# Alternatives that are very hard to use:
# pdf = "0.9.0"
# pdf-extract = "0.8.0"
anyhow = "1.0.81"
thiserror = "1.0.58"
color-eyre = "0.6.3"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
cli-clipboard = "0.4"
rss = "2.0"
atom_syndication = "0.12"
rayon = "1.8"
dom_smoothie = "0.6.1"
sanitize-filename = "0.6.0"
fast_html2md = "0.0.47"

[dev-dependencies]
tempfile = "3.10.1"
